<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lidar_subscriber</name>
  <version>0.0.0</version>
  <description>Este paquete recibe la información del LiDAR del argo J8</description>
  <maintainer email="k@todo.todo">k</maintainer>
  <license>Apache-2.0</license>
  
<buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

