<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>teleop_pkg</name>
  <version>0.0.0</version>
  <description> A robot-agnostic teleoperation node to convert keyboard or gamepad commands to Twist
    messages.</description>
  
  <maintainer email="clalancette@openrobotics.org">Chris Lalancette</maintainer>
  <license>BSD License 2.0</license>
  <author email="namniart@gmail.com">Austin Hendrix</author>
  <author>Graylin Trevor Jay</author>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
